welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: ':' expected but ')' found.
def faireMotif(T)
                ^Array2:44: error: identifier expected but '}' found.
}
^