welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var T = new Array[Color] (getMondeHauteur())
  var i=0
  do
  {
    T(i)=getCouleurSol()
    avance()
    i = i + 1
  } while (!estFaceMur)
  positionDepart()
  for (i <- 1 to getMondeHauteur()-1)
  {
    faireMotif(T)
    positionDepart()
  }
}

def positionDepart()
{
  for (i <- 1 to getMondeHauteur())
  {
    recule()
  }
}

def faireMotif(T)
{
  gauche()
  avance()
  droite()
  val decalage = litMessage().toInt
  do
  {
    for (i <- 1 to getMondeHauteur())
    {
      setCouleurBrosse(T((i+decalage)%getMondeHauteur()))
      baisseBrosse()
      leveBrosse()
      avance()
    }
  } while (!isFaceMur)
}